Refactor index.html to add course levels

--- a/index.html
+++ b/index.html
@@ -1,45 +1,40 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Malla Interactiva – Relaciones Internacionales PUCP</title>
-  <link rel="stylesheet" href="estilo.css">
-</head>
-<body>
-
-<h1>Malla Interactiva – Relaciones Internacionales (PUCP)</h1>
-<p class="subtitulo">Haz clic en un curso para ver requisitos</p>
+<h1>Malla Interactiva PUCP – Relaciones Internacionales</h1>
 
 <div class="malla">
 
-  <!-- NIVEL 1 -->
-  <div class="nivel">
-    <h2>Nivel 1</h2>
-    <div class="curso" onclick="mostrar('tei1')">Teoría de las RI I</div>
-  </div>
+ 
+  <!-- Facultad - Nivel 5 -->
+  <div class="nivel">Nivel 5</div>
+  <div class="item" onclick="mostrar('N5_1')">Teoría de las RI 1</div>
+  <div class="item" onclick="mostrar('N5_2')">Historia de las RI</div>
+  <div class="item" onclick="mostrar('N5_3')">Derecho Internacional Público</div>
 
-  <!-- NIVEL 2 -->
-  <div class="nivel">
-    <h2>Nivel 2</h2>
-    <div class="curso" onclick="mostrar('dip')">Derecho Internacional Público</div>
-    <div class="curso" onclick="mostrar('hist1')">Historia de las RI I</div>
-  </div>
+  <!-- Nivel 6 -->
+  <div class="nivel">Nivel 6</div>
+  <div class="item" onclick="mostrar('N6_1')">Métodos de Investigación en RI</div>
+  <div class="item" onclick="mostrar('N6_2')">Estadística para Análisis Político 2</div>
+  <div class="item" onclick="mostrar('N6_3')">Globalización y Sociedad</div>
 
-  <!-- NIVEL 3 -->
-  <div class="nivel">
-    <h2>Nivel 3</h2>
-    <div class="curso" onclick="mostrar('tei2')">Teoría de las RI II</div>
-    <div class="curso" onclick="mostrar('eco')">Economía Peruana y Global</div>
-  </div>
+  <!-- Nivel 7 -->
+  <div class="nivel">Nivel 7</div>
+  <div class="item" onclick="mostrar('N7_1')">Seguridad Internacional</div>
+  <div class="item" onclick="mostrar('N7_2')">Política Exterior Peruana</div>
+  <div class="item" onclick="mostrar('N7_3')">Geografía Económica y Política</div>
 
-  <!-- NIVEL 4 -->
-  <div class="nivel">
-    <h2>Nivel 4</h2>
-    <div class="curso" onclick="mostrar('metodos')">Fundamentos de Investigación</div>
-    <div class="curso" onclick="mostrar('hist2')">Historia de las RI II</div>
-  </div>
+  <!-- Nivel 8 -->
+  <div class="nivel">Nivel 8</div>
+  <div class="item" onclick="mostrar('N8_1')">Regímenes Internacionales</div>
+  <div class="item" onclick="mostrar('N8_2')">Cooperación Internacional</div>
 
-  <!-- NIVEL 5 -->
-  <div class="nivel">
-    <h2>Nivel 5</h2>
-    <div cla
+  <!-- Nivel 9 -->
+  <div class="nivel">Nivel 9</div>
+  <div class="item" onclick="mostrar('N9_1')">Electivo Especialidad</div>
+  <div class="item" onclick="mostrar('N9_2')">Negociación Internacional</div>
+
+  <!-- Nivel 10 -->
+  <div class="nivel">Nivel 10</div>
+  <div class="item" onclick="mostrar('N10_1')">Trabajo de Investigación</div>
+
+</div>
+
+<div id="contenido"></div>
